--- a/styles.css
+++ b/styles.css
@@ -41,13 +41,13 @@ p {
 }
 
 #navbar a:hover {
-  background-color: #c088ff;
+  background-color: rgb(1, 1, 128);
   color: white;
   transition-duration: 0.2s;
 }
 
 #navbar a.active {
-  background-color: #c088ff;
+  background-color: rgb(1, 1, 128);
   color: white;
   transition-duration: 0.2s;
 }
@@ -148,7 +148,7 @@ a:hover {
 }
 
 .button2 {
-background-color: #c088ff;
+background-color: rgb(1, 1, 128);
 color: white;
 width: 300px;
 height: 30px;
@@ -157,7 +157,7 @@ font-size: 13px;
 }
         
 .button2:hover {
-background-color: #74529b;
+background-color: rgb(0, 0, 196);
 color: white;
 width: 300px;
 height: 30px;
